Removed option to ask for discard of impossible card
instead we have NONE_OF_THESE so this is clear in the metrics